--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,10 +1,16 @@
-ul {
-    padding: 0;
-    list-style: none;
-    user-select: none;
+h1 {
+    text-align: center;
 }
 
-.selected {
-    color: white;
-    background: blue;
+div {
+    display: flex;
+    flex-direction: row;
+}
+
+app-festival-list {
+    width: 50%;
+}
+
+app-festival-details {
+    width: 50%;
 }
