--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,10 +7,9 @@
 </head>
 <body>
   <h1>{{ title }}</h1>
-  <input [(ngModel)]="festival" (keyup.enter)="onAppend()">
-  <button (click)="onAppend()">+</button>
-  <ul>
-    <li *ngFor="let festival of festivals" (click)="onSelect(festival)" [class]="festival == selected ? 'selected' : null">{{ festival }}</li>
-  </ul>
+  <div>
+    <app-festival-list (onSelect)="onSelect($event)"></app-festival-list>
+    <app-festival-details [festival]="selected"></app-festival-details>
+  </div>
 </body>
 </html>
