Minor layout changes

--- a/src/app/festival-details/festival-details.component.html
+++ b/src/app/festival-details/festival-details.component.html
@@ -1,5 +1,5 @@
-<div *ngIf="festival">
-    <div>Name: {{ festival.name }}</div>
-    <div>Date: {{ festival.date }}</div>
-    <div>Location: {{ festival.location }}</div>
-</div>
+<ul *ngIf="festival">
+    <li><strong>Name:</strong> {{ festival.name }}</li>
+    <li><strong>Date:</strong> {{ festival.date }}</li>
+    <li><strong>Location:</strong> {{ festival.location }}</li>
+</ul>
