--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+
 <body>
   <h1>{{ title }}</h1>
+  <div>
+    <app-festival-create></app-festival-create>
+  </div>
+  <br>
   <div>
     <app-festival-list (onSelect)="onSelect($event)"></app-festival-list>
     <app-festival-details [selected_id]="selected_id"></app-festival-details>
   </div>
 </body>
+
 </html>
