Added delete button to FestivalList component

--- a/src/app/festival-list/festival-list.component.css
+++ b/src/app/festival-list/festival-list.component.css
@@ -11,6 +11,13 @@ li {
     padding: 10px;
 }
 
+li div {
+    display: flex;
+
+    flex-direction: row;
+    justify-content: space-between;
+}
+
 .selected {
     color: white;
     background: blue;
