--- a/src/app/festival-list/festival-list.component.html
+++ b/src/app/festival-list/festival-list.component.html
@@ -1,5 +1,8 @@
+<input [(ngModel)]="query" placeholder="search">
+<br>
+<br>
 <ul>
-    <li *ngFor="let festival of festivals">
+    <li *ngFor="let festival of festivals | festivalSearch:query">
         <div>
             <a routerLink="../festival/{{festival.id}}">{{festival.name}}</a>
             <button (click)="onDelete(festival)">-</button>
