--- a/src/app/festival-details/festival-details.component.html
+++ b/src/app/festival-details/festival-details.component.html
@@ -1,7 +1,9 @@
-<form *ngIf="eventForm" [formGroup]="eventForm">
+<form *ngIf="festival">
     <table>
-    <tr><td>Name:<td><input formControlName="name"></td></tr>
-    <tr><td>Date:<td><input formControlName="date"></td></tr>
-    <tr><td>Location:<td><input formControlName="location"></td></tr>
+    <tr><td>Name:<td>{{ festival.name }}</td></tr>
+    <tr><td>Date:<td>{{ festival.date }}</td></tr>
+    <tr><td>Location:<td>{{ festival.location }}</td></tr>
+    <tr><td>Organiser:<td>{{ organiser }}</td></tr>
+    <tr><td>Participants:<td>{{ participants }}</td></tr>
     </table>
 </form>
